# fevm-solidity-precompiles

./: .gitignore  Makefile  README.md
.github/workflows/: analysis.yaml  m1.analysis.yaml  m1.main.yaml  m2.main.yaml  m3.main.yaml  main.yaml
contract/: cbor_test.sol  simplecoin.sol
docs/: fevm-cbor-poc.md
docs/fevm-cbor-poc/: _category_.json  benchmark.md  conclusions.md  fevm-cbor-poc.md  structure.md
docs/fevm-precompile/: benchmark.md  conclusions.md  fevm-precompile.md  structure.md
docs/fevm-precompile/introduction/: tech-involved.md
docs/fevm-solidity/: benchmark.md  fevm-solidity.md
docs/fevm-solidity-precompiles/: _category_.json  benchmark.md  conclusions.md  deploy-it.md  run-it.md  structure.md
docs/fevm-solidity/introduction/: tech-involved.md
docs/report/: _category_.json  milestone_1.md  milestone_2.md  overview.md
m1/: Makefile  README.md
m1/testing/: Cargo.toml
m2/: Makefile  README.md
m2/contract/: precompile.sol
m2/testing/: Cargo.toml
m2/testing/src/: main.rs
m3/: Makefile  README.md
m3/contract/: MinerAPI.sol  filecoin.mock.sol  market.test.sol  miner.test.sol  test.sol
m3/contract/testContracts/: miner.test.sol
m3/contract/typeLibraries/: CommonTypes.sol  MinerTypes.sol
m3/testing/src/: main.rs
testing/: Cargo.toml
testing/src/: main.rs
utils/: package.json  rlp.js
