[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm" }
#fvm_integration_tests = { version = "0.1.0", git = "https://github.com/filecoin-project/ref-fvm" }
#fvm_shared = { version = "3.0.0-alpha.2", git = "https://github.com/filecoin-project/ref-fvm" }
#fvm = { version = "3.0.0-alpha.1", git = "https://github.com/filecoin-project/ref-fvm", default-features = false }
#fvm_ipld_encoding = { version = "0.2.2", git = "https://github.com/filecoin-project/ref-fvm" }

fvm_ipld_blockstore = { version = "0.1.1" }
fvm_shared = { version = "3.0.0-alpha.5" }
fvm = { version = "3.0.0-alpha.2", git = "https://github.com/rllola/ref-fvm", branch = "feature/integration-eam", default-features = false, features = ["m2-native"] }
fvm_ipld_encoding = { version = "0.3.0" }
fvm_integration_tests = { version = "0.1.0", git = "https://github.com/rllola/ref-fvm", branch = "feature/integration-eam" }


serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
wabt = "0.10.0"
hex = "0.4.3"
cid = "0.8.5"
prettytable-rs = "^0.9"


fil_actors_runtime = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", rev = "17f314e5d5f2402e284109aaf477063f2614a0c9", features = ["m2-native"] }
fil_actor_eam = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", rev = "17f314e5d5f2402e284109aaf477063f2614a0c9" }

[patch.crates-io]
#fvm_ipld_encoding = { version = "0.2.2", git = "https://github.com/filecoin-project/ref-fvm" }
#fvm_ipld_hamt = { version = "0.5.1", git = "https://github.com/filecoin-project/ref-fvm" }
#fvm_ipld_amt = { version = "0.4.2", git = "https://github.com/filecoin-project/ref-fvm" }
#fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm" }
#fvm_shared = { version = "3.0.0-alpha.2", git = "https://github.com/filecoin-project/ref-fvm" }

fvm_ipld_encoding = { version = "0.3.0", git = "https://github.com/rllola/ref-fvm", branch = "feature/integration-eam" }
#fvm_ipld_hamt = { version = "0.5.1", git = "https://github.com/rllola/ref-fvm", branch = "fix/integration" }
#fvm_ipld_amt = { version = "0.4.2", git = "https://github.com/rllola/ref-fvm", branch = "fix/integration" }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/rllola/ref-fvm", branch = "feature/integration-eam" }
fvm_shared = { version = "3.0.0-alpha.5", git = "https://github.com/rllola/ref-fvm", branch = "feature/integration-eam" }
fvm_sdk = { version = "3.0.0-alpha.5", git = "https://github.com/rllola/ref-fvm", branch = "feature/integration-eam" }
